--- a/Angular-SW-UI/src/index.html
+++ b/Angular-SW-UI/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <title>SwUi</title>
+    <title>SW UI</title>
     <base href="/">
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
